--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -2,12 +2,12 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/rvPokemon"
+    android:id="@+id/clLoginPokemon"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@drawable/pokedex_login"
     android:padding="16dp"
-    tools:context=".LoginActivity">
+    tools:context=".views.LoginActivity">
 
     <EditText
         android:layout_width="0dp"
