--- a/app/src/main/res/layout/pokemon_item.xml
+++ b/app/src/main/res/layout/pokemon_item.xml
@@ -6,21 +6,20 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:layout_marginStart="8dp"
-    android:layout_marginLeft="8dp"
     android:layout_marginTop="8dp"
     android:layout_marginEnd="8dp"
-    android:layout_marginRight="8dp"
+    android:layout_marginBottom="8dp"
     app:layout_constraintEnd_toEndOf="parent"
     app:layout_constraintStart_toStartOf="parent"
     app:layout_constraintTop_toTopOf="parent"
-
+    app:cardCornerRadius="10dp"
     >
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginBottom="8dp"
-        android:layout_marginTop="8dp">
+        android:layout_height="match_parent"
+        android:background="@drawable/background_pokemon"
+        android:paddingBottom="4dp">
 
         <ImageView
             android:id="@+id/ivPokemon"
@@ -28,33 +27,31 @@
             android:layout_height="146dp"
             android:layout_marginStart="8dp"
             android:layout_marginEnd="8dp"
-            android:background="@drawable/charmander"
-            android:contentDescription="Pokemon Image"
+            android:contentDescription="@string/pokemon_image"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.498"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
 
         <TextView
             android:id="@+id/tvNumber"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="4dp"
+            android:layout_width="39dp"
+            android:layout_height="15dp"
+            android:fontFamily="@font/poppins_semibold"
             android:text=""
-            android:textColor="#919191"
-            android:textSize="14sp"
+            android:textColor="@color/white"
+            android:textSize="12sp"
             app:layout_constraintStart_toStartOf="@+id/ivPokemon"
             app:layout_constraintTop_toBottomOf="@+id/ivPokemon"
             tools:text="N° 001" />
 
         <TextView
             android:id="@+id/tvName"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="4dp"
+            android:layout_width="134dp"
+            android:layout_height="27dp"
+            android:fontFamily="@font/poppins_bold"
             android:text=""
-            android:textColor="#313131"
-            android:textSize="24sp"
+            android:textColor="@color/white"
+            android:textSize="20sp"
             app:layout_constraintStart_toStartOf="@+id/ivPokemon"
             app:layout_constraintTop_toBottomOf="@+id/tvNumber"
             tools:text="Charmander" />
@@ -62,6 +59,8 @@
         <LinearLayout
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_marginStart="-4dp"
+            android:layout_marginTop="4dp"
             android:orientation="horizontal"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.0"
@@ -73,10 +72,12 @@
                 android:layout_width="62dp"
                 android:layout_height="match_parent"
                 android:layout_marginStart="4dp"
-                android:background="#fd7d24"
+                android:layout_marginBottom="6dp"
+                android:background="@drawable/rounded_border"
+                android:fontFamily="@font/poppins_medium"
                 android:text=""
                 android:textAlignment="center"
-                android:textColor="#FFFFFF"
+                android:textColor="#212121"
                 android:textSize="12sp"
                 tools:text="Fire" />
 
@@ -85,12 +86,16 @@
                 android:layout_width="65dp"
                 android:layout_height="17dp"
                 android:layout_marginStart="4dp"
-                android:background="#fd7d24"
+                android:layout_marginBottom="6dp"
+                android:background="@drawable/rounded_border"
+                android:fontFamily="@font/poppins_medium"
                 android:text=""
                 android:textAlignment="center"
-                android:textColor="#FFFFFF"
+                android:textColor="#212121"
                 android:textSize="12sp"
-                tools:text="Fire" />
+                tools:text="Fire"
+
+                />
 
         </LinearLayout>
 
