--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -7,7 +7,7 @@
     android:layout_height="match_parent"
     android:background="@drawable/pokedex_login"
     android:padding="16dp"
-    tools:context=".views.LoginActivity">
+    tools:context=".view.LoginActivity">
 
     <EditText
         android:layout_width="0dp"
