--- a/app/src/main/res/layout/activity_signup.xml
+++ b/app/src/main/res/layout/activity_signup.xml
@@ -7,7 +7,7 @@
     android:layout_height="match_parent"
     android:background="@drawable/pokedex_register"
     android:padding="16dp"
-    tools:context=".views.SignupActivity">
+    tools:context=".view.SignupActivity">
 
     <EditText
         android:layout_width="0dp"
