--- a/app/src/main/res/layout/pokemon_item.xml
+++ b/app/src/main/res/layout/pokemon_item.xml
@@ -25,6 +25,7 @@
             android:id="@+id/ivPokemon"
             android:layout_width="134dp"
             android:layout_height="146dp"
+            android:layout_marginTop="60dp"
             android:layout_marginStart="8dp"
             android:layout_marginEnd="8dp"
             android:contentDescription="@string/pokemon_image"
@@ -98,6 +99,17 @@
                 />
 
         </LinearLayout>
+
+        <Button
+            android:id="@+id/btnFavorite"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/favoritar"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.498"
+            app:layout_constraintStart_toStartOf="parent"
+            tools:layout_editor_absoluteY="12dp" />
+
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
